[package]
name = "learn_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
    "std",
    "bevy_window",
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_color",
    "png",
    "dynamic_linking",
    "x11",
] }
